--- a/public/index.html
+++ b/public/index.html
@@ -257,7 +257,7 @@
         },
         "fr": {
             "_download": "Téléchargement",
-            "_trynow": "Essayez maintenant gratuitement !",
+            "_trynow": "Essayez maintenant!",
             "_features": "Fonctionalités",
             "_contact": "Contact",
             "_language": "en",
