Update labels and remove unused files

--- a/public/CGU/index.html
+++ b/public/CGU/index.html
@@ -100,15 +100,16 @@ Adresse de courrier électronique :&nbsp;service.epi@engie.com</span></p>
 
 <p style='margin:0cm;margin-bottom:.0001pt'><span style='font-family:"Arial",sans-serif'>Le
 Créateur du site est :&nbsp;<strong><span style='font-family:"Arial",sans-serif'>ENGIE
-PACIFIQUE INFORMATIQUE – «&nbsp;EPI&nbsp;»</span></strong></span></p>
+PACIFIQUE INFORMATIQUE – «&nbsp;EPI&nbsp;» - 15 Rue Jean Chalier – PK4 – 98800
+NOUMEA</span></strong></span></p>
 
 <p style='margin-top:0cm;margin-right:0cm;margin-bottom:12.0pt;margin-left:
-0cm'><span style='font-family:"Arial",sans-serif'>L’hébergeur du site est :&nbsp;<strong><span
-style='font-family:"Arial",sans-serif'>ENGIE PACIFIQUE INFORMATIQUE –
-«&nbsp;EPI&nbsp;»</span></strong></span></p>
+0cm'><span style='font-family:"Arial",sans-serif'>L’hébergeur du site est :<b>&nbsp;Google
+Corporation, Central 1, Iowa - ETATS UNIS</b></span></p>
 
-<p style='text-align:justify'><span class=klinicslablight><b><u><span
-style='font-family:"Arial",sans-serif'>CONDITIONS GENERALES D’UTILISATIONS</span></u></b></span></p>
+<p style='margin-top:0cm;margin-right:0cm;margin-bottom:12.0pt;margin-left:
+0cm'><span class=klinicslablight><b><u><span style='font-family:"Arial",sans-serif'>CONDITIONS
+GENERALES D’UTILISATIONS</span></u></b></span></p>
 
 <p style='text-align:justify'><span class=klinicslablight><b><span
 style='font-family:"Arial",sans-serif'>OBJET</span></b></span></p>
@@ -124,12 +125,13 @@ style='font-family:"Arial",sans-serif'>DEFINITIONS</span></b></span></p>
 <p style='text-align:justify'><span class=klinicslablight><b><span
 style='font-family:"Arial",sans-serif'>Simply City</span></b></span><span
 class=klinicslablight><span style='font-family:"Arial",sans-serif'>&nbsp;:
-service permettant l’échange d’information entre les Utilisateurs et les
+service permettant l’échange d’information entre EPI, les Utilisateurs et les
 Autorités Publiques concernant notamment, le trafic urbain, la météo, les
-commerçants…Cet échange d’information s’effectue via une application préalablement
-téléchargée sur un smartphone, «&nbsp;application Simply City&nbsp;». Simply
-City est protégée par un brevet déposé par EPI, propriétaire de la solution
-informatique permettant la mise en œuvre de Simply City.</span></span></p>
+commerçants…Cet échange d’information s’effectue via une application
+préalablement téléchargée sur un smartphone, «&nbsp;application Simply
+City&nbsp;». Simply City est protégée par un brevet déposé par EPI,
+propriétaire de la solution informatique permettant la mise en œuvre de Simply
+City.</span></span></p>
 
 <p style='text-align:justify'><span class=klinicslablight><b><span
 style='font-family:"Arial",sans-serif'>Autorité Publique</span></b></span><span
@@ -150,10 +152,10 @@ rubriques de Simply City.</span></span></p>
 
 <p style='text-align:justify'><span class=klinicslablight><b><span
 style='font-family:"Arial",sans-serif'>Donnée à caractère personnel</span></b></span><span
-class=klinicslablight><span style='font-family:"Arial",sans-serif'>&nbsp;:
-Informations, telles que définis par la loi Informatique et liberté relative à
-un Utilisateur, personne physique identifiée, consistant notamment en son
-adresse e-mail, login, mot de passe.</span></span></p>
+class=klinicslablight><span style='font-family:"Arial",sans-serif'>&nbsp;: Toute
+information, identifiant directement ou indirectement une personne physique
+(ex. nom, no d’immatriculation, no de téléphone, photographie, date de
+naissance, commune de résidence, empreinte digitale...).</span></span></p>
 
 <p style='text-align:justify'><span class=klinicslablight><b><span
 style='font-family:"Arial",sans-serif'>Utilisateur&nbsp;:</span></b></span><span
@@ -163,9 +165,9 @@ services proposés sur Simply City.</span></span></p>
 
 <p style='text-align:justify'><span class=klinicslablight><b><span
 style='font-family:"Arial",sans-serif'>Membre&nbsp;:</span></b></span><span
-class=klinicslablight><span style='font-family:"Arial",sans-serif'> Personne
-Physique ayant téléchargée l’application Simply City sur son smartphone et
-s’étant identifiée sur Simply City.</span></span></p>
+class=klinicslablight><span style='font-family:"Arial",sans-serif'> Personne physique
+ayant téléchargée l’application Simply City sur son smartphone et s’étant identifiée
+sur Simply City.</span></span></p>
 
 <p style='text-align:justify'><span class=klinicslablight><b><span
 style='font-family:"Arial",sans-serif'>DESCRIPTION DE L’APPLICATION – DES
@@ -174,8 +176,8 @@ SERVICES PROPOSES - ACCESSIBILITE</span></b></span></p>
 <p style='text-align:justify'><span class=klinicslablight><span
 style='font-family:"Arial",sans-serif'>L’application intègre des contenus
 géolocalisés mis à jour en temps réel et couvrant notamment le domaine des commerces,
-musées, services, évènements culturels ou promotionnels ou touristiques, transports,…
-Cette application permet également l’accès à divers services (notifications
+musées, services, évènements culturels ou promotionnels ou touristiques, transports,
+… Cette application permet également l’accès à divers services (notifications
 d’évènements, signaler un incident à la mairie, calculs d’itinéraires…)</span></span></p>
 
 <p style='text-align:justify'><span class=klinicslablight><span
@@ -197,25 +199,28 @@ style='font-family:"Arial",sans-serif'>Après avoir téléchargé l’applicatio
 Simply City, l’Utilisateur procède à son inscription en suivant les
 instructions qu’il trouvera sur ladite application. Il s’engage à donner de
 vraies informations le concernant telle que son adresse e-mail, élément
-indispensable à la prise en charge de son inscription. Un pseudo ainsi qu’un
-mot de passe lui seront demandés. </span></span></p>
+indispensable à la prise en charge de son inscription. Une adresse mail ainsi
+qu’un mot de passe lui seront demandés. </span></span></p>
 
 <p style='text-align:justify'><span class=klinicslablight><span
 style='font-family:"Arial",sans-serif'>Une fois la procédure d’inscription
-achevée, l’Utilisateur deviendra un Membre et pourra s’identifier via son
-pseudo et son mot de passe pour émettre des évènements ou recevoir des notifications.</span></span></p>
+achevée, l’Utilisateur deviendra un Membre et pourra s’identifier via son adresse
+mail et son mot de passe pour émettre des évènements ou recevoir des notifications.</span></span></p>
 
 <p style='text-align:justify'><span class=klinicslablight><span
-style='font-family:"Arial",sans-serif'>A tout moment, le Membre peut procéder à
-sa désinscription grâce à l’onglet «&nbsp;mon compte&nbsp;». Dans un tel cas,
-la suppression effective de ses Données sera faite dans les quinze (15) jours.</span></span></p>
+style='font-family:"Arial",sans-serif'>À tout moment, le Membre peut procéder à
+sa désinscription en envoyant un mail à l’adresse suivante&nbsp;: </span></span><a
+href="mailto:simplycity.epi@engie.com"><span style='font-family:"Arial",sans-serif'>simplycity.epi@engie.com</span></a><span
+class=klinicslablight><span style='font-family:"Arial",sans-serif'>. Dans un
+tel cas, la suppression effective de ses Données sera faite dans un délai
+raisonnable.</span></span></p>
 
 <p style='text-align:justify'><span class=klinicslablight><span
 style='font-family:"Arial",sans-serif'>En s’inscrivant et en acceptant les
 présentes CGU, le Membre reconnait et accepte que son pseudo et ses évènements
 soient publics sur l’application Simply City et seront visibles, sur celle-ci
-par les autres Membres inscrits. Les Membres et les Utilisateurs ont
-effectivement accès aux Evènements et aux photos associées.</span></span></p>
+par les autres Membres inscrits. Les Membres et les Utilisateurs ont effectivement
+accès aux Evènements et aux photos associées.</span></span></p>
 
 <p style='text-align:justify'><span class=klinicslablight><b><span
 style='font-family:"Arial",sans-serif'>PROPRIETE INTELECTUELLE</span></b></span></p>
@@ -227,7 +232,7 @@ de tout ou partie de la marque est strictement interdite et doit faire l’objet
 d’une autorisation écrite préalable du titulaire de la marque.</span></span></p>
 
 <p style='text-align:justify'><span class=klinicslablight><span
-style='font-family:"Arial",sans-serif'>Tous les textes, illustrations, images,
+style='font-family:"Arial",sans-serif'>Tous les textes, illustrations, images, photos,
 sons et logos présents sur Simply City sont strictement réservés au titre du
 droit d’auteur, ainsi qu’au titre de la propriété intellectuelle et ce pour le
 monde entier.</span></span></p>
@@ -252,18 +257,16 @@ données personnelles en générale.</span></span></p>
 <p style='text-align:justify'><span class=klinicslablight><span
 style='font-family:"Arial",sans-serif'>Les informations recueillies par EPI
 (données d’identification à savoir l’état civil et identité, données de
-connexion et de localisation) sont celle strictement nécessaires à la
-fourniture des services proposés par Simply City à l’Utilisateur/Membre&nbsp;;
-elles font l’objet d’un traitement informatique dont la seule finalité est
-l’accès aux services proposés par Simply City.</span></span></p>
+connexion et de localisation) sont celles nécessaires à la fourniture des
+services proposés par Simply City à l’Utilisateur/Membre&nbsp;; elles font
+l’objet d’un traitement informatique. </span></span></p>
 
 <p style='text-align:justify'><span class=klinicslablight><span
 style='font-family:"Arial",sans-serif'>L’Utilisateur/Membre bénéficie d’un
 droit d’accès et de rectification des informations qui le concernent, ainsi que
 d’un droit d’opposition à l’utilisation des informations qui le concernent,
-qu’il peut exercer à tout moment en s’adressant à </span></span><a
-href="mailto:service.epi@engie.com"><span style='font-family:"Arial",sans-serif'>service.epi@engie.com</span></a><span
-class=klinicslablight><span style='font-family:"Arial",sans-serif'>.</span></span></p>
+qu’il peut exercer à tout moment en s’adressant à </span></span><span
+style='font-family:"Arial",sans-serif'>simplycity.epi@engie.com.</span></p>
 
 <p style='text-align:justify'><span class=klinicslablight><span
 style='font-family:"Arial",sans-serif'>Si l’Utilisateur/Membre n’autorise pas
@@ -279,7 +282,7 @@ commercialiser, les publier, les exploiter, les modifier, et pour toute la
 durée de l’inscription de l’Utilisateur/Membre à Simply City.</span></span></p>
 
 <p style='text-align:justify'><span class=klinicslablight><b><span
-style='font-family:"Arial",sans-serif'>LIMITE DE RESPONABILITE </span></b></span></p>
+style='font-family:"Arial",sans-serif'>LIMITE DE RESPONSABILITE </span></b></span></p>
 
 <p style='text-align:justify'><span class=klinicslablight><span
 style='font-family:"Arial",sans-serif'>EPI s’efforce d’assurer au mieux de ses
@@ -295,8 +298,8 @@ recherche d’itinéraire), lesquelles informations ne constituent ni une garant
 ni un engagement de la part de EPI à l’égard de l’Utilisateur/Membre.</span></span></p>
 
 <p style='text-align:justify'><span class=klinicslablight><span
-style='font-family:"Arial",sans-serif'>EPI ne saurait être responsable des éléments
-suivants&nbsp;: </span></span></p>
+style='font-family:"Arial",sans-serif'>EPI ne saurait être responsable des
+éléments suivants&nbsp;: </span></span></p>
 
 <p style='margin-left:36.0pt;text-align:justify;text-indent:-18.0pt'><span
 class=klinicslablight>-<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
@@ -329,9 +332,9 @@ services offerts, notamment pour des opérations de maintenance.</span></span></
 <p style='text-align:justify'><span class=klinicslablight><span
 style='font-family:"Arial",sans-serif'>EPI ne maitrise pas les risques liés au
 fonctionnement d’internet et les contraintes liées aux limites du réseau
-Internet (lenteur et interruption de la connexion internet) et attire l’attention
-de l’Utilisateur/Membre sur l’existence d’éventuels risques en termes de
-confidentialité des données transitant via l’application.</span></span></p>
+Internet (lenteur et interruption de la connexion internet) et attire
+l’attention de l’Utilisateur/Membre sur l’existence d’éventuels risques en
+termes de confidentialité des données transitant via l’application.</span></span></p>
 
 <p style='text-align:justify'><span class=klinicslablight><b><span
 style='font-family:"Arial",sans-serif'>RESPONSABILITE UTILISATEUR/MEMBRE</span></b></span></p>
@@ -378,6 +381,8 @@ CGU sont soumises à la loi applicable en Nouvelle-Calédonie. En cas de litige,
 parties tenteront de régler amiablement ce différend. A défaut, ils porteront
 leur litige devant les tribunaux de Nouméa.</span></p>
 
+<p style='text-align:justify'><span style='font-family:"Arial",sans-serif'>&nbsp;</span></p>
+
 <p style='text-align:justify'><b><span style='font-family:"Arial",sans-serif'>VALIDATION
 DES CGU – MODIFICATION – EVOLUTION </span></b></p>
 
@@ -390,8 +395,8 @@ ou les autorisations nécessaires pour accepter les présentes CGU.</span></p>
 déclare être informé que les informations le concernant seront conservées
 pendant toute la durée de la relation contractuelle. Il est expressément
 informé que la seule désactivation de l'Application est insuffisante pour
-mettre un terme aux présentes et que dans le cas où il désinstalle l'Application
-il devra donc le notifier expressément à EPI en s'adressant à
+mettre un terme aux présentes et que dans le cas où il désinstalle
+l'Application il devra donc le notifier expressément à EPI en s'adressant à
 service.epi@engie.com qui supprimera alors toutes ses données personnelles.</span></p>
 
 <p style='text-align:justify'><span style='font-family:"Arial",sans-serif'>EPI
