--- a/public/index.html
+++ b/public/index.html
@@ -5,13 +5,13 @@
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
+    <meta name="description" content="Application mobile sur Android et iOS qui vous simplifie la ville">
     <meta name="author" content="ENGIE Pacifique Informatique">
 
-    <title>Simply City</title>
+    <title data-translate="_title">Simply City, l'application mobile sur Android et iOS qui vous simplifie la ville</title>
 
-    <!-- Bootstrap core CSS -->
-    <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <!-- Custom styles for this template -->
+    <link href="css/simply-city.min.css" rel="stylesheet">
 
     <!-- Custom fonts for this template -->
     <link rel="stylesheet" href="vendor/font-awesome/css/font-awesome.min.css">
@@ -23,8 +23,7 @@
     <!-- Plugin CSS -->
     <link rel="stylesheet" href="device-mockups/device-mockups.min.css">
 
-    <!-- Custom styles for this template -->
-    <link href="css/new-age.min.css" rel="stylesheet">
+
   </head>
 
   <body id="page-top">
@@ -103,7 +102,7 @@
     <section class="features" id="features">
       <div class="container">
         <div class="section-heading text-center">
-          <h2 data-translate="_features_heading">Unlimited Features, Unlimited Fun</h2>
+          <h2 data-translate="_features_heading">Toute la ville dans votre poche</h2>
           <p class="text-muted" data-translate="_features_sub_heading">Check out what you can do with this app theme!</p>
           <hr>
         </div>
@@ -166,8 +165,8 @@
     <section class="cta">
       <div class="cta-content">
         <div class="container">
-          <h2 ><span data-translate="_dont_wait">Stop waiting.</span><br><span data-translate="_start_using">Start building.</span></h2>
-          <a href="#contact" class="btn btn-outline btn-xl js-scroll-trigger" data-translate="_joinus">Rejoignez-nous !</a>
+            <h2 ><span data-translate="_dont_wait">Stop waiting.</span><br><span data-translate="_start_using">Start building.</span></h2>
+            <a href="#contact" class="btn btn-outline btn-xl js-scroll-trigger" data-translate="_joinus">Rejoignez-nous !</a>
         </div>
       </div>
       <div class="overlay"></div>
@@ -274,7 +273,7 @@
 
     <footer>
       <div class="container">
-        <p>&copy; 2017 Start Bootstrap. All Rights Reserved.</p>
+        <p>&copy; 2017 ENGIE Pacifique Informatique. Tous droits réservés.</p>
         <ul class="list-inline">
           <li class="list-inline-item">
             <a href="#">Privacy</a>
