--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="Application mobile sur Android et iOS qui vous simplifie la ville">
     <meta name="author" content="ENGIE Pacifique Informatique">
 
-    <title data-translate="_title">Simply City, l'application mobile sur Android et iOS qui vous simplifie la ville</title>
+    <title data-translate="title">Simply City, l'application mobile de Nouméa qui va vous simplifier la ville : évènements, restaurants, hôtels, commerces, plans </title>
 
     <!-- Custom styles for this template -->
     <link href="css/simply-city.min.css" rel="stylesheet">
@@ -39,16 +39,16 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#download" data-translate="_download">Téléchargement</a>
+              <a class="nav-link js-scroll-trigger" href="#download" data-translate="download">Téléchargement</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#features" data-translate="_features">Fonctionalités</a>
+              <a class="nav-link js-scroll-trigger" href="#features" data-translate="features">Fonctionalités</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#contact" data-translate="_contact">Contact</a>
+              <a class="nav-link js-scroll-trigger" href="#contact" data-translate="contact">Contact</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link language-toggle" data-translate="_language">fr</a>
+              <a class="nav-link language-toggle" data-translate="language">fr</a>
 
             </li>
           </ul>
@@ -59,10 +59,10 @@
     <header class="masthead">
       <div class="container h-100">
         <div class="row h-100">
-          <div class="col-lg-7 my-auto">
+          <div class="col-lg-7 my-auto flex-column">
             <div class="header-content mx-auto">
-              <h1 class="mb-5" data-translate="_punchline">Avec Simply City simplifiez vous la ville !</h1>
-              <a href="#download" class="btn btn-outline btn-xl js-scroll-trigger" data-translate="_trynow">Essayez maintenant gratuitement !</a>
+              <h1 class="mb-5" data-translate="punchline">Avec Simply City simplifiez vous la ville !</h1>
+              <a href="#download" class="btn btn-outline btn-xl js-scroll-trigger" data-translate="trynow">Essayez maintenant gratuitement !</a>
             </div>
           </div>
           <div class="col-lg-5 my-auto">
@@ -71,7 +71,7 @@
                 <div class="device">
                   <div class="screen">
                     <!-- Demo image for screen mockup, you can put an image here, some HTML, an animation, video, or anything else! -->
-                    <img src="img/home.png" class="img-fluid" alt="">
+                    <img src="img/home.png" class="img-fluid" alt="Accueil, plans, évènements, promotions, hôtels">
                   </div>
                   <div class="button">
                     <!-- You can hook the "home button" to some JavaScript events or just remove it -->
@@ -88,11 +88,11 @@
       <div class="container">
         <div class="row">
           <div class="col-md-8 mx-auto">
-            <h2 class="section-heading" data-translate="_download_title">Discover what all the buzz is about!</h2>
-            <p data-translate="_download_description">Our app is available on any mobile device! Download now to get started!</p>
+            <h2 class="section-heading" data-translate="downloadTitle">Venez découvrir l'application dont tout le monde parle!</h2>
+            <p data-translate="downloadDescription">Notre application est disponible sur tous les smartphones! Téléchargez-la pour essayer!</p>
             <div class="badges">
-              <a class="badge-link" href="https://play.google.com/store/apps/details?id=com.epi.SimplyCity"><img data-img="_google_play" src="img/googleplay-fr.svg" alt=""></a>
-              <a class="badge-link" href="https://itunes.apple.com/fr/app/simply-city/id1245375216?mt=8"><img data-img="_apple_store" src="img/App_Store_Badge_FR_135x40.svg" alt=""></a>
+              <a class="badge-link" href="https://play.google.com/store/apps/details?id=com.epi.SimplyCity"><img data-img="playStore" src="img/googleplay-fr.svg" alt=""></a>
+              <a class="badge-link" href="https://itunes.apple.com/fr/app/simply-city/id1245375216?mt=8"><img data-img="appleStore" src="img/App_Store_Badge_FR_135x40.svg" alt=""></a>
             </div>
           </div>
         </div>
@@ -102,8 +102,8 @@
     <section class="features" id="features">
       <div class="container">
         <div class="section-heading text-center">
-          <h2 data-translate="_features_heading">Toute la ville dans votre poche</h2>
-          <p class="text-muted" data-translate="_features_sub_heading">Check out what you can do with this app theme!</p>
+          <h2 data-translate="featuresHeading">Toute la ville dans votre poche</h2>
+          <p class="text-muted" data-translate="featuresSubHeading">Regardez tout ce que vous pouvez faire avec cette app!</p>
           <hr>
         </div>
         <div class="row">
@@ -113,7 +113,7 @@
                 <div class="device">
                   <div class="screen">
                     <!-- Demo image for screen mockup, you can put an image here, some HTML, an animation, video, or anything else! -->
-                    <img src="img/map.png" class="img-fluid" alt="">
+                    <img src="img/map.jpg" class="img-fluid" alt="plans, cartes, musée, sorties culturelles">
                   </div>
                   <div class="button">
                     <!-- You can hook the "home button" to some JavaScript events or just remove it -->
@@ -128,31 +128,31 @@
                 <div class="col-lg-6">
                   <div class="feature-item">
                     <i class="icon-event text-primary"></i>
-                    <h3 data-translate="_event_title">Tous les évènements</h3>
-                    <p class="text-muted" data-translate="_event_description">Restez informés de ce qui sepasse autour de vous !</p>
+                    <h3 data-translate="feature1Title">Tous les évènements</h3>
+                    <p class="text-muted" data-translate="feature1Description">Restez informés de ce qui sepasse autour de vous !</p>
                   </div>
                 </div>
                 <div class="col-lg-6">
                   <div class="feature-item">
                     <i class="icon-location-pin text-primary"></i>
-                    <h3 data-translate="_direction_title">Flexible Use</h3>
-                    <p class="text-muted" data-translate="_direction_description">Put an image, video, animation, or anything else in the screen!</p>
+                    <h3 data-translate="feature2Title">Tous les lieux</h3>
+                    <p class="text-muted" data-translate="feature2Description">Où emmener les enfants ce week-end? Où boire un verre ce soir?</p>
                   </div>
                 </div>
               </div>
               <div class="row">
                 <div class="col-lg-6">
                   <div class="feature-item">
-                    <i class="icon-emotsmile text-primary"></i>
-                    <h3 data-translate="_free_title">Free to Use</h3>
-                    <p data-translate="_free_description" class="text-muted">As always, this theme is free to download and use for any purpose!</p>
+                    <i class="icon-bag text-primary"></i>
+                    <h3 data-translate="feature3Title">Tous les commerces</h3>
+                    <p data-translate="feature3Description" class="text-muted">Prêt à porter, bijouteries, centre commerciaux...</p>
                   </div>
                 </div>
                 <div class="col-lg-6">
                   <div class="feature-item">
-                    <i class="icon-exclamation text-primary"></i>
-                    <h3 data-translate="_incident_title">Open Source</h3>
-                    <p data-translate="_incident_description" class="text-muted">Since this theme is MIT licensed, you can use it commercially!</p>
+                    <i class="icon-like text-primary"></i>
+                    <h3 data-translate="feature4Title">Tous les services</h3>
+                    <p data-translate="feature4Description" class="text-muted">Services publiques, écoles, bureaux de poste, stations services...</p>
                   </div>
                 </div>
               </div>
@@ -165,15 +165,18 @@
     <section class="cta">
       <div class="cta-content">
         <div class="container">
-            <h2 ><span data-translate="_dont_wait">Stop waiting.</span><br><span data-translate="_start_using">Start building.</span></h2>
-            <a href="#contact" class="btn btn-outline btn-xl js-scroll-trigger" data-translate="_joinus">Rejoignez-nous !</a>
+            <h2 ><span ></span><br><br><br><span ></span></h2>
         </div>
       </div>
       <div class="overlay"></div>
     </section>
 
-    <section>
+    <section id="contact">
       <div class="container">
+          <div class="section-heading text-center">
+              <h2 data-translate="contactHeading">Contactez-nous</h2>
+              <hr>
+          </div>
         <form id="contact-form" method="post" action="?" role="form">
     
           <div class="messages"></div>
@@ -183,17 +186,17 @@
             <div class="row">
               <div class="col-md-6">
                 <div class="form-group">
-                  <label for="form_name" data-translate="_form_label_firstname">Firstname *</label>
+                  <label for="form_name" data-translate="formLabelFirstname">Firstname *</label>
                   <input id="form_name" type="text" name="name" class="form-control" placeholder="Please enter your firstname *" required="required"
-                    data-error="Firstname is required." data-placeholder="_form_placeholder_firstname">
+                    data-error="Firstname is required." data-placeholder="formPlaceholderFirstname">
                   <div class="help-block with-errors"></div>
                 </div>
               </div>
               <div class="col-md-6">
                 <div class="form-group">
-                  <label for="form_lastname" data-translate="_form_label_lastname">Lastname *</label>
+                  <label for="form_lastname" data-translate="formLabelLastname">Lastname *</label>
                   <input id="form_lastname" type="text" name="surname" class="form-control" placeholder="Please enter your lastname *" required="required"
-                    data-error="Lastname is required." data-placeholder="_form_placeholder_lastname">
+                    data-error="Lastname is required." data-placeholder="formPlaceholderLastname">
                   <div class="help-block with-errors"></div>
                 </div>
               </div>
@@ -201,16 +204,16 @@
             <div class="row">
               <div class="col-md-6">
                 <div class="form-group">
-                  <label for="form_email" data-translate="_form_label_email">Email *</label>
+                  <label for="form_email" data-translate="formLabelEmail">Email *</label>
                   <input id="form_email" type="email" name="email" class="form-control" placeholder="Please enter your email *" required="required"
-                    data-error="Valid email is required." data-placeholder="_form_placeholder_email">
+                    data-error="Valid email is required." data-placeholder="formPlaceholderEmail">
                   <div class="help-block with-errors"></div>
                 </div>
               </div>
               <div class="col-md-6">
                 <div class="form-group">
-                  <label for="form_phone" data-translate="_form_label_phone">Phone</label>
-                  <input id="form_phone" type="tel" name="phone" class="form-control" placeholder="Please enter your phone" data-placeholder="_form_placeholder_phone">
+                  <label for="form_phone" data-translate="formLabelPhone">Phone</label>
+                  <input id="form_phone" type="tel" name="phone" class="form-control" placeholder="Please enter your phone" data-placeholder="formPlaceholderPhone">
                   <div class="help-block with-errors"></div>
                 </div>
               </div>
@@ -218,9 +221,9 @@
             <div class="row">
               <div class="col-md-12">
                 <div class="form-group">
-                  <label for="form_message" data-translate="_form_label_message">Message *</label>
+                  <label for="form_message" data-translate="formLabelMessage">Message *</label>
                   <textarea id="form_message" name="message" class="form-control" placeholder="Message for me *" rows="4" required="required"
-                    data-error="Please,leave us a message." data-placeholder="_form_placeholder_message"></textarea>
+                    data-error="Please,leave us a message." data-placeholder="formPlaceholderMessage"></textarea>
                   <div class="help-block with-errors"></div>
                 </div>
               </div>
@@ -228,7 +231,7 @@
                   <button
                   class="g-recaptcha btn btn-primary btn-send"
                   data-sitekey="6Lc_njgUAAAAAGldV3rLB4CKzPDAbm3cZlgIE1zC"
-                  data-callback="send_email" data-translate="_form_label_button">
+                  data-callback="send_email" data-translate="formLabelButton">
                   Send message
                   </button>
               </div>
@@ -236,7 +239,7 @@
             <div class="row">
               <div class="col-md-12">
                 <p class="text-muted">
-                  <strong>*</strong> <span data-translate="_form_label_mandatory">These fields are required. </span>
+                  <strong>*</strong> <span data-translate="formLabelMandatory">These fields are required. </span>
                 </p>
               </div>
             </div>
@@ -246,19 +249,14 @@
       </div>
     </section>
 
-    <section class="contact bg-primary" id="contact">
+    <section class="contact bg-primary">
       <div class="container">
-        <h2><span data-translate="_love_friends_1">Nous</span>
+        <h2><span data-translate="loveFriends1">Nous</span>
           <i class="fa fa-heart"></i>
-          <span data-translate="_love_friends_2">nous faire de nouveaux amis!</span></h2>
+          <span data-translate="loveFriends2">nous faire de nouveaux amis!</span></h2>
         <ul class="list-inline list-social">
-          <li class="list-inline-item social-twitter">
-            <a href="#">
-              <i class="fa fa-twitter"></i>
-            </a>
-          </li>
           <li class="list-inline-item social-facebook">
-            <a href="#">
+            <a href="https://www.facebook.com/simplycitync/">
               <i class="fa fa-facebook"></i>
             </a>
           </li>
@@ -297,8 +295,8 @@
     <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
 
     <!-- Custom scripts for this template -->
-    <script src="js/new-age.min.js"></script>
-    <script src='https://www.google.com/recaptcha/api.js'></script>
+    <script src="js/new-age.min.js" async defer></script>
+    <script src='https://www.google.com/recaptcha/api.js' async defer></script>
   </body>
 
 </html>
