[EVO] Add google analytics

--- a/public/CGU/index.html
+++ b/public/CGU/index.html
@@ -152,14 +152,13 @@
 	
 	<p style='text-align:justify'><span class=klinicslablight><b><span
 	style='font-family:"Arial",sans-serif'>Donnée à caractère personnel</span></b></span><span
-	class=klinicslablight><span style='font-family:"Arial",sans-serif'>&nbsp;: <span
-	style='background:yellow'>Toute information relative à une personne physique
+	class=klinicslablight><span style='font-family:"Arial",sans-serif'>&nbsp;:Toute information relative à une personne physique
 	identifiée ou qui peut être identifiée, directement ou indirectement, par
 	référence à un numéro d'identification ou à un ou plusieurs éléments qui lui
 	sont propres. Pour déterminer si une personne est identifiable, il convient de
 	considérer l'ensemble des moyens en vue de permettre son identification dont
 	dispose ou auxquels peut avoir accès le responsable du traitement ou toute
-	autre personne.</span></span></span></p>
+	autre personne.</span></span></p>
 	
 	<p style='text-align:justify'><span class=klinicslablight><b><span
 	style='font-family:"Arial",sans-serif'>Utilisateur&nbsp;:</span></b></span><span
@@ -278,7 +277,7 @@
 	fonctionnalités pourront être limitées.</span></span></p>
 	
 	<p style='text-align:justify'><span class=klinicslablight><span
-	style='font-family:"Arial",sans-serif;background:yellow'>Toutes les Données
+	style='font-family:"Arial",sans-serif'>Toutes les Données
 	transmises par un Membre via Simply City restent sa propriété pleine et
 	entière. L’utilisateur donne à EPI le droit d’en disposer, les copier, pour
 	toute la durée de l’inscription de l’Utilisateur/Membre à Simply City.</span></span></p>
