--- a/public/index.html
+++ b/public/index.html
@@ -299,16 +299,18 @@
         <footer>
         <div class="container">
             <p>&copy; 2017 ENGIE Pacifique Informatique. Tous droits réservés.</p>
+            <p class="mt-6"><a target="_blank" href="https://admin.simplycity.nc/">Administration de l'application</a></p>
+
             <ul class="list-inline">
-            <li class="list-inline-item">
-                <a href="#">Privacy</a>
-            </li>
-            <li class="list-inline-item">
-                <a href="#">Terms</a>
-            </li>
-            <li class="list-inline-item">
-                <a href="#">FAQ</a>
-            </li>
+                <li class="list-inline-item">
+                    <a href="#">Privacy</a>
+                </li>
+                <li class="list-inline-item">
+                    <a href="#">Terms</a>
+                </li>
+                <li class="list-inline-item">
+                    <a href="#">FAQ</a>
+                </li>
             </ul>
         </div>
         </footer>
