--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,7 @@
 
         <!-- Custom styles for this template -->
         <link href="css/simply-city.min.css" rel="stylesheet">
+        <link rel="icon" type="image/x-icon" href="img/simplyNoumeaBlue.png">
 
         <!-- Custom fonts for this template -->
         <link rel="stylesheet" href="vendor/font-awesome/css/font-awesome.min.css">
