--- a/public/index.html
+++ b/public/index.html
@@ -300,17 +300,14 @@
         <footer>
         <div class="container">
             <p>&copy; 2017 ENGIE Pacifique Informatique. Tous droits réservés.</p>
-            <p class="mt-6"><a target="_blank" href="https://admin.simplycity.nc/">Administration de l'application</a></p>
 
             <ul class="list-inline">
                 <li class="list-inline-item">
+                    <a target="_blank" href="https://admin.simplycity.nc/">Administration de l'application</a>
                     <a href="#">Privacy</a>
                 </li>
                 <li class="list-inline-item">
-                    <a href="#">Terms</a>
-                </li>
-                <li class="list-inline-item">
-                    <a href="#">FAQ</a>
+                    <a target="_blank" href="https://www.simplycity.nc/CGU">Nos Conditions Générales d'Utilisation (CGU)</a>
                 </li>
             </ul>
         </div>
