[EVO] Change CGU link

--- a/public/index.html
+++ b/public/index.html
@@ -304,10 +304,9 @@
             <ul class="list-inline">
                 <li class="list-inline-item">
                     <a target="_blank" href="https://admin.simplycity.nc/">Administration de l'application</a>
-                    <a href="#">Privacy</a>
                 </li>
                 <li class="list-inline-item">
-                    <a target="_blank" href="https://www.simplycity.nc/CGU">Nos Conditions Générales d'Utilisation (CGU)</a>
+                    <a target="_blank" href="./CGU">Nos Conditions Générales d'Utilisation (CGU)</a>
                 </li>
             </ul>
         </div>
