[EVO] Add "administration" section

--- a/public/index.html
+++ b/public/index.html
@@ -59,6 +59,9 @@
                 <a class="nav-link js-scroll-trigger" href="#features" data-translate="features">Fonctionalités</a>
                 </li>
                 <li class="nav-item">
+                    <a class="nav-link js-scroll-trigger" href="#backoffice" data-translate="backoffice">Commerçants</a>
+                    </li>
+                <li class="nav-item">
                 <a class="nav-link js-scroll-trigger" href="#contact" data-translate="contact">Contact</a>
                 </li>
                 <li class="nav-item">
@@ -189,6 +192,41 @@
             </div>
         </div>
         </section>
+        <section class="backoffice bg-tertiary" id="backoffice">
+            <div class="container">
+                <div class="section-heading text-center">
+                <h2 data-translate="backofficeHeading">Une application web pour gérer votre contenu</h2>
+                <hr>
+                </div>
+                <div class="row">
+                    <div class="col-lg-5 my-auto flex-column">
+                        <div class="header-content mx-auto">
+                            <h3 data-translate="backoffice-h3">Gérez facilement votre contenu</h3>
+                        <p data-translate="backoffice-p-1">Créez et gérez vos fiches (restaurants, commerces, hôtels...)</p>
+                        <p data-translate="backoffice-p-2">Créez et gérez vos évènements</p>
+                        <br><br>
+                        <a href="https://admin.simplycity.nc" class="btn btn-outline btn-xl" data-translate="administration">Gérez votre contenu</a>
+                        </div>
+                    </div>
+                <div class="col-lg-7 my-auto">
+                    <div class="device-container">
+                    <div class="device-mockup imac">
+                        <div class="device">
+                        <div class="screen">
+                            <!-- Demo image for screen mockup, you can put an image here, some HTML, an animation, video, or anything else! -->
+                            <img src="img/backoffice.png" class="img-fluid" alt="Interface d'administration">
+                        </div>
+                        <div class="button">
+                            <!-- You can hook the "home button" to some JavaScript events or just remove it -->
+                        </div>
+                        </div>
+                    </div>
+                    </div>
+                </div>
+                </div>
+            </div>
+            </section>
+
 
         <section class="cta">
         <div class="cta-content">
@@ -303,10 +341,7 @@
 
             <ul class="list-inline">
                 <li class="list-inline-item">
-                    <a target="_blank" href="https://admin.simplycity.nc/">Administration de l'application</a>
-                </li>
-                <li class="list-inline-item">
-                    <a target="_blank" href="./CGU">Nos Conditions Générales d'Utilisation (CGU)</a>
+                    <a target="_blank" href="./CGU" data-translate="footer-cgu">Nos Conditions Générales d'Utilisation (CGU)</a>
                 </li>
             </ul>
         </div>
